# tangram

./: .eslintrc.json  .gitignore  .gitmodules  .rustfmt.toml  Buffy.toml  Cargo.toml  Dockerfile  README.md  build.rs  config.rs  features.rs  grid.rs  lib.rs  main.rs  package-lock.json  package.json  predict.rs  progress.rs  progress_view.rs  report.rs  tangram.rs  test.rs  train.rs  tscommon.json  tsconfig-common.json  tsconfig.json
app/: 404.tsx  500.tsx  Cargo.toml  README.md  base64.ts  build.rs  cookies.rs  cookies.ts  deps.ts  document.tsx  error.rs  error.tsx  lib.rs  main.tsx  mod.rs  model.rs  monitor_event.rs  package.json  pinwheel.ts  time.rs  track.rs  tsconfig.json  typings.d.ts  user.rs
app/api/: Cargo.toml  health.rs  track.rs
app/common/: Cargo.toml  class_select.tsx  class_select_field.rs  class_select_field.tsx  cookies.ts  date_window.rs  date_window_select.tsx  date_window_select_field.rs  date_window_select_field.tsx  definitions.rs  definitions.tsx  error.rs  lib.rs  logo.rs  metrics_row.css  metrics_row.rs  metrics_row.tsx  mod.rs  model.rs  model_layout_info.rs  monitor_event.rs  organizations.rs  predict.rs  predict.tsx  prediction_result.tsx  production_metrics.rs  production_stats.rs  render.ts  repos.rs  time.rs  time.tsx  time_charts.tsx  timezone.rs  tokens.rs  tokens.tsx  topbar.rs  topbar.tsx  user.rs
app/helpers/: cookies.rs  mod.rs  model.rs  organizations.rs  production_metrics.rs  production_stats.rs  repos.rs  time.rs  user.rs
app/layouts/: Cargo.toml  app_layout.css  app_layout.rs  app_layout.tsx  auth_layout.css  auth_layout.rs  auth_layout.tsx  document.rs  lib.rs  mod.rs  model_layout.css  model_layout.rs  model_layout.tsx  organization_layout.tsx  topbar_layout.css  topbar_layout.rs  topbar_layout.tsx
app/migrations/: 2020-01-01-000000-init.sql  2020_01_01_000000_init.sql  mod.rs
app/pages/: health.rs  mod.rs
app/production_metrics/: .binary_classification_production_metrics.rs.pending-snap  binary_classification_production_metrics.rs  classification_production_metrics.rs  mod.rs  multiclass_classification_production_metrics.rs  regression_production_metrics.rs
app/production_stats/: column_stats.rs  mod.rs  number_stats.rs  prediction_stats.rs
app/scripts/: check
app/static/: tangram.css  timezone.js
app/telemetry/: mod.ts
app/types/: date_window.rs  mod.rs  production_metrics.rs  production_stats.rs  repo.rs
charts/: Cargo.toml  bar_chart.rs  bar_chart.ts  box_chart.rs  box_chart.ts  chart.rs  chart.ts  charts.css  common.rs  common.ts  components.rs  components.tsx  config.rs  config.ts  feature_contributions_chart.rs  feature_contributions_chart.ts  lib.rs  lib.ts  line_chart.rs  line_chart.ts  mod.ts  package.json  shap_chart.ts  tooltip.rs  tooltip.ts  tsconfig.json
cli/: Cargo.toml  license.rs  main.rs  progress_view.rs
cli/app/: mod.rs
cli/train/: mod.rs  progress_view.rs
core/: Cargo.toml  build.rs  config.rs  features.rs  grid.rs  id.rs  lib.rs  model.rs  predict.rs  progress.rs  report.rs  stats.rs  test.rs  text.rs  train.rs
core/dataframe/: load.rs
core/gbt/: README.md  bin.rs  binary_classifier.rs  bundling.rs  mod.rs  multiclass_classifier.rs  progress.rs  regressor.rs  shap.rs  train.rs  types.rs
core/linear/: README.md  binary_classifier.rs  mod.rs  multiclass_classifier.rs  progress.rs  regressor.rs
core/metrics/: accuracy.rs  auc_roc.rs  binary_classification.rs  binary_cross_entropy.rs  classification.rs  cross_entropy.rs  mean.rs  mean_squared_error.rs  mean_variance.rs  mod.rs  regression.rs
core/model/: classifier.rs  features.rs  mod.rs  regressor.rs  train_options.rs  tree.rs
core/stats/: dataset.rs  histogram.rs  mod.rs
core/tree/: README.md  bin.rs  binary_classifier.rs  early_stopping.rs  multiclass_classifier.rs  progress.rs  regressor.rs  shap.rs  train.rs
core/types/: classifier.rs  features.rs  mod.rs  model.rs  regressor.rs  stats.rs  train_options.rs  tree.rs
core/util/: finite.rs  mod.rs  super_unsafe.rs
dataframe/: Cargo.toml  README.md  lib.rs  load.rs  mod.rs
libtangram/: Cargo.toml  lib.rs  tangram.h
linear/: Cargo.toml  README.md  binary_classifier.rs  early_stopping.rs  lib.rs  mod.rs  multiclass_classifier.rs  progress.rs  regressor.rs  shap.rs  types.rs
linear/benchmarks/: all.rs  allstate.py  allstate.rs  boston-sklearn.py  boston.py  boston.rs  census.py  (+13 more)
pinwheel/: Cargo.toml  README.md  client.ts  document.tsx  esbuild.rs  lib.rs  lib.ts  main.rs  mod.ts  package.json  tsconfig.json  types.d.ts
scripts/: Cargo.toml  benchmark.ts  build  build-download.ts  build-start.ts  build_start.ts  check  clean  deploy  dev  dev.rs  fmt  generate_license.rs  lint  main.rs  new-migration  new_migration  package.json  prepare_release  prepare_release.rs  production_track_test.rs  production_track_test.ts  release  release.rs  test  test.rs  test.ts  track-sample-data.ts  track.ts  watch.rs
tree/: CONTRIBUTING.md  Cargo.toml  README.md  bin.rs  bin_stats.rs  binary_classifier.rs  choose_best_split.rs  compute_bin_stats.rs  compute_binned_features.rs  compute_binning_instructions.rs  early_stopping.rs  examples_index.rs  feature_importances.rs  lib.rs  mod.rs  multiclass_classifier.rs  progress.rs  rearrange_examples_index.rs  regressor.rs  shap.rs  single.rs  split.rs  timing.rs  train.rs  train_tree.rs  types.rs
ui/: Cargo.toml  alert.css  alert.rs  alert.tsx  alert_icon.css  alert_icon.rs  alert_icon.tsx  asciicast.css  asciicast.tsx  avatar.css  avatar.rs  avatar.tsx  button.css  button.rs  button.tsx  callout.css  callout.rs  callout.tsx  card.css  card.tsx  code.css  code.rs  code.tsx  colors.ts  confusion_matrix.css  confusion_matrix.rs  confusion_matrix.tsx  confusion_matrix_comparison.css  confusion_matrix_comparison.rs  confusion_matrix_comparison.tsx  defs.tsx  deps.ts  details.css  details.rs  details.tsx  global.css  header.css  header.tsx  image.css  image.rs  (+51 more)
www/: 404.tsx  Cargo.toml  build.rs  deps.ts  document.tsx  error.tsx  global.css  lib.ts  main.rs  main.tsx  mod.ts  package.json  routes.rs  tsconfig.json  typings.d.ts
(+937 files in other folders)
