[workspace]
members = [
	"app",
	"cli",
	"core",
	"deps",
	"features",
	"html",
	"libtangram",
	"linear",
	"metrics",
	"pinwheel",
	"scripts",
	"tree",
	"util",
	"www",
]

[profile.dev]
# opt-level = 2

[profile.release]
# debug = true
# codegen-units = 1
# lto = true

# [patch.'https://github.com/tangram-hq/term-ui']
# term-ui = { path = "../term-ui" }
