[package]
edition = "2018"
name = "tangram_app"
version = "0.0.0"

[lib]
path = "lib.rs"

[build-dependencies]
pinwheel = { path = "../pinwheel" }

[dev-dependencies]
insta = "1"

[dependencies]
anyhow = "1"
base64 = "0.13"
bytes = "0.5"
chrono = { version = "0.4", features = ["serde"] }
chrono-tz = { version = "0.5", features = ["serde"] }
futures = "0.3"
hyper = { version = "0.13", features = ["stream"] }
include_dir = "0.6"
itertools = "0.9"
lexical = "5"
maplit = "1"
multer = "1.2"
ndarray = { version = "0.13" }
num-traits = "0.2"
pinwheel = { path = "../pinwheel" }
rand = "0.7"
rand_xoshiro = "0.4"
reqwest = { version = "0.10", default-features = false, features = ["json", "rustls-tls"] }
rmp-serde = "0.14"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_urlencoded = "0.7"
sqlx = { git = "https://github.com/nitsky/sqlx", branch = "master", default-features = false, features = ["any", "chrono", "postgres", "runtime-tokio", "sqlite"] }
tangram_core = { path = "../core" }
tangram_finite = { path = "../finite" }
tangram_id = { path = "../id" }
tangram_metrics = { path = "../metrics" }
tokio = { version = "0.2", features = ["rt-threaded"] }
url = "2"
