[package]
edition = "2018"
name = "tangram_charts"
version = "0.0.0"

[lib]
path = "lib.rs"

[dependencies]
num-traits = "0.2"
web-sys = { version = "0.3.45", features = [
  "CanvasRenderingContext2d",
  "console",
  "CssStyleDeclaration",
  "Document",
  "DomRect",
  "InputEvent",
  "Element",
  "EventTarget",
  "EventListener",
  "File",
  "HtmlCanvasElement",
  "HtmlElement",
  "HtmlInputElement",
  "HtmlFormElement",
  "HtmlSelectElement",
  "MediaQueryList",
  "MouseEvent",
  "Node",
  "NodeList",
  "Text",
  "Touch",
  "TouchEvent",
  "TouchList",
  "Window",
] }
html = { path = "../html" }
wasm-bindgen = "0.2.68"
