[package]
edition = "2018"
name = "tangram_charts"
version = "0.0.0"

[lib]
path = "lib.rs"

[dependencies]
html = { path = "../html" }
itertools = "0.9"
lexical = "5"
num-traits = "0.2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
wasm-bindgen = { version = "0.2.68", features = ["serde-serialize"] }
web-sys = { version = "0.3.45", features = [
  "CanvasRenderingContext2d",
  "console",
  "CssStyleDeclaration",
  "Document",
  "DomRect",
  "DomStringMap",
  "Element",
  "EventListener",
  "EventTarget",
  "File",
  "HtmlCanvasElement",
  "HtmlElement",
  "HtmlFormElement",
  "HtmlInputElement",
  "HtmlSelectElement",
  "InputEvent",
  "MediaQueryList",
  "MouseEvent",
  "Node",
  "NodeList",
  "Text",
  "TextMetrics",
  "Touch",
  "TouchEvent",
  "TouchList",
  "Window",
] }
