[package]
edition = "2018"
license = "UNLICENSED"
name = "tangram_cli"
version = "0.2.0-dev"
default-run = "tangram"

[[bin]]
name = "tangram"
path = "main.rs"

[dependencies]
anyhow = "1"
backtrace = "0.3"
clap = { version = "3.0.0-beta.1", features = ["color"] }
colored = "2"
dirs = "3"
once_cell = "1"
tangram_app = { path = "../app" }
tangram_core = { path = "../core" }
tangram_util = { path = "../util" }
term-ui = { git = "https://github.com/tangram-hq/term-ui" }
tokio = { version = "0.2", features = ["full"] }
url = "2"
