[package]
edition = "2018"
license = "UNLICENSED"
name = "tangram_cli"
version = "0.2.0-dev"
default-run = "tangram"

[[bin]]
name = "tangram"
path = "main.rs"

[features]
default = ["train", "app"]
train = ["tangram_core"]
app = ["tangram_app"]

[dependencies]
backtrace = "0.3"
base64 = "0.13"
clap = { version = "3.0.0-beta.2", features = ["color"] }
colored = "2"
dirs = "3"
once_cell = "1"
serde = "1"
serde_json = "1"
rsa = "0.3"
sha2 = "0.9"
tangram_app = { path = "../app", optional = true }
tangram_core = { path = "../core", optional = true }
tangram_util = { path = "../util" }
term-ui = { git = "https://github.com/tangram-hq/term-ui" }
url = "2"
