[package]
edition = "2018"
name = "tangram_core"
version = "0.2.0-dev"

[lib]
path = "lib.rs"

[dev-dependencies]
insta = "0.16"

[dependencies]
anyhow = "1"
derive_more = "0.99"
itertools = "0.9"
ndarray = { version = "0.13", features = ["serde"] }
num-traits = "0.2"
rand = "0.7"
rand_xoshiro = "0.4"
rmp-serde = "0.14"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.8"
tangram_dataframe = { path = "../dataframe" }
tangram_finite = { path = "../finite" }
tangram_id = { path = "../id" }
tangram_linear = { path = "../linear" }
tangram_metrics = { path = "../metrics" }
tangram_progress = { path = "../progress" }
tangram_text = { path = "../text" }
tangram_tree = { path = "../tree" }
thiserror = "1"
