[package]
edition = "2018"
license = "UNLICENSED"
name = "tangram_core"
version = "0.2.0-dev"

[lib]
path = "lib.rs"

[dependencies]
itertools = "0.9"
fnv = "1"
ndarray = { version = "0.13" }
num-traits = "0.2"
rmp-serde = "0.14"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.8"
tangram_dataframe = { path = "../dataframe" }
tangram_linear = { path = "../linear" }
tangram_metrics = { path = "../metrics" }
tangram_features = { path = "../features" }
tangram_tree = { path = "../tree" }
tangram_util = { path = "../util" }
