[package]
edition = "2018"
license = "MIT"
name = "tangram_dataframe"
version = "0.1.0-dev"

[lib]
path = "lib.rs"

[dev-dependencies]
insta = "1"

[dependencies]
csv = "1"
fnv = "1"
lexical = "5"
ndarray = "0.14"
num-traits = "0.2"
rand = "0.7"
rand_xoshiro = "0.4"
tangram_util = { path = "../util" }
