[package]
edition = "2018"
license = "UNLICENSED"
name = "libtangram"
version = "0.2.0-dev"

[lib]
name = "tangram"
path = "lib.rs"
crate-type = ["cdylib", "staticlib"]

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tangram_core = { path = "../core" }

[target.'cfg(target_arch = "wasm32")'.dependencies]
wee_alloc = "0.4"
