[package]
edition = "2018"
license = "MIT"
name = "tangram_linear"
version = "0.1.0-dev"

[lib]
path = "lib.rs"

[[bin]]
name = "tangram_linear_benchmark_all"
path = "benchmarks/all.rs"

[[bin]]
name = "tangram_linear_benchmark_allstate"
path = "benchmarks/allstate.rs"

[[bin]]
name = "tangram_linear_benchmark_boston"
path = "benchmarks/boston.rs"

[[bin]]
name = "tangram_linear_benchmark_census"
path = "benchmarks/census.rs"

[[bin]]
name = "tangram_linear_benchmark_flights"
path = "benchmarks/flights.rs"

[[bin]]
name = "tangram_linear_benchmark_heart_disease"
path = "benchmarks/heart_disease.rs"

[[bin]]
name = "tangram_linear_benchmark_higgs"
path = "benchmarks/higgs.rs"

[[bin]]
name = "tangram_linear_benchmark_iris"
path = "benchmarks/iris.rs"

[dependencies]
itertools = "0.9"
maplit = "1"
ndarray = "0.13"
num-traits = "0.2"
rayon = "1.4"
tangram_dataframe = { path = "../dataframe" }
tangram_metrics = { path = "../metrics" }
tangram_features = { path = "../features" }
tangram_util = { path = "../util" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
