[package]
edition = "2018"
license = "MIT"
name = "pinwheel"
version = "0.1.0-dev"

[lib]
path = "lib.rs"

[[bin]]
name = "pinwheel"
path = "main.rs"

[dependencies]
anyhow = "1"
clap = { version = "3.0.0-beta.2", features = ["color"] }
futures = "0.3"
hyper = { version = "0.13", features = ["stream"] }
include_dir = "0.6"
num-traits = "0.2"
rusty_v8 = "0.11"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sourcemap = "6"
tokio = { version = "0.2", features = ["full"] }
url = "2"
walkdir = "2"
which = "4"
