[package]
edition = "2018"
license = "MIT"
name = "pinwheel"
version = "0.1.0-dev"

[lib]
path = "lib.rs"

[dependencies]
backtrace = "0.3"
futures = "0.3"
hex = "0.4"
http = "0.2"
hyper = { version = "0.13", features = ["stream"] }
include_dir = "0.6"
num-traits = "0.2"
rusty_v8 = "0.13"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.9"
sourcemap = "6"
tangram_util = { path = "../util" }
tokio = { version = "0.2", features = ["full"] }
toml = "0.5"
url = "2"
walkdir = "2"
wasm-bindgen-cli-support = "0.2.68"
which = "4"
