[package]
edition = "2018"
license = "MIT"
name = "tangram_scripts"
version = "0.0.0"
build = false

[[bin]]
name = "tangram_script_release"
path = "release.rs"

[[bin]]
name = "tangram_script_production_track_test"
path = "production_track_test.rs"

[[bin]]
name = "tangram_script_command_test"
path = "test.rs"

[dependencies]
anyhow = "1"
base64 = "0.13"
reqwest = "0.10"
rustyline = "6"
serde = "1"
serde_json = "1"
tokio = { version = "0.2", features = ["full"] }
url = "2"
xshell = "0.1"
