[package]
edition = "2018"
license = "MIT"
name = "tangram_tree"
version = "0.0.0"

[lib]
path = "lib.rs"

[features]
default = []
timing = []

[[bin]]
name = "boston-tree"
path = "benchmarks/boston.rs"

[[bin]]
name = "census-tree"
path = "benchmarks/census.rs"

[[bin]]
name = "flights-tree"
path = "benchmarks/flights.rs"

[[bin]]
name = "heart-disease-tree"
path = "benchmarks/heart-disease.rs"

[[bin]]
name = "higgs-tree"
path = "benchmarks/higgs.rs"

[[bin]]
name = "iris-tree"
path = "benchmarks/iris.rs"

[dependencies]
itertools = "0.9"
maplit = "1"
ndarray = { version = "0.13", features = ["rayon"] }
num-traits = "0.2"
once_cell = "1"
rayon = "1.4"
tangram_dataframe = { path = "../dataframe" }
tangram_metrics = { path = "../metrics" }
tangram_util = { path = "../util" }
