[package]
edition = "2018"
license = "MIT"
name = "tangram_tree"
version = "0.1.0-dev"

[lib]
path = "lib.rs"

[features]
default = []
timing = []

[[bin]]
name = "tangram_tree_benchmarks"
path = "benchmarks/main.rs"

[dependencies]
clap = { version = "3.0.0-beta.2", features = ["color"] }
itertools = "0.9"
maplit = "1"
ndarray = { version = "0.13", features = ["rayon"] }
num-traits = "0.2"
rayon = "1.4"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tangram_dataframe = { path = "../dataframe" }
tangram_metrics = { path = "../metrics" }
tangram_util = { path = "../util" }
