[package]
edition = "2018"
name = "tangram_ui"
version = "0.0.0"

[lib]
path = "lib.rs"

[dependencies]
html = { path = "../html" }
wasm-bindgen = "0.2.68"
num-traits = "0.2"
web-sys = { version = "0.3.45", features = [
  "console",
  "Document",
  "InputEvent",
  "Element",
  "EventTarget",
  "File",
  "FileList",
  "HtmlElement",
  "HtmlInputElement",
  "HtmlFormElement",
  "HtmlSelectElement",
  "Node",
  "NodeList",
  "Text",
  "Window",
] }
