[package]
edition = "2018"
name = "tangram_www"
version = "0.0.0"

[[bin]]
name = "www"
path = "main.rs"

[build-dependencies]
tangram_deps = { path = "../deps" }

[dependencies]
tangram_deps = { path = "../deps" }
tangram_util = { path = "../util" }
tangram_www_pages_index = { path = "pages/index" }
