[package]
edition = "2018"
name = "tangram_app_common"
version = "0.0.0"

[lib]
path = "lib.rs"

[dev-dependencies]
insta = "1"

[dependencies]
html = { path = "../../html" }
num-traits = "0.2"
serde = { version = "1", features = ["derive"] }
tangram_core = { path = "../../core" }
tangram_deps = { path = "../../deps" }
tangram_metrics = { path = "../../metrics" }
tangram_ui = { path = "../../ui" }
tangram_charts = { path = "../../charts" }
tangram_util = { path = "../../util" }
