[package]
edition = "2018"
name = "tangram_app_layouts"
version = "0.0.0"

[lib]
path = "lib.rs"

[dependencies]
html = { path = "../../html" }
serde = { version = "1", features = ["derive"] }
tangram_ui = { path = "../../ui" }
tangram_util = { path = "../../util" }
tangram_app_common = { path = "../common" }
