[package]
edition = "2018"
name = "tangram_app_pages_organizations_new"
version = "0.0.0"

[lib]
path = "lib.rs"

[dependencies]
html = { path = "../../../../html" }
serde = { version = "1", features = ["derive"] }
tangram_app_common = { path = "../../../common" }
tangram_app_layouts = { path = "../../../layouts" }
tangram_deps = { path = "../../../../deps" }
tangram_ui = { path = "../../../../ui" }
tangram_util = { path = "../../../../util" }
