[package]
edition = "2018"
name = "tangram_app_pages_repos_new"
version = "0.0.0"

[lib]
path = "lib.rs"

[dependencies]
serde = "1"
tangram_app_common = { path = "../../../common" }
tangram_app_layouts = { path = "../../../layouts" }
tangram_deps = { path = "../../../../deps" }
tangram_ui = { path = "../../../../ui" }
tangram_util = { path = "../../../../util" }
