[package]
edition = "2018"
name = "tangram_app_pages_repos_repo_id_models_new"
version = "0.0.0"

[lib]
path = "lib.rs"

[dependencies]
html = { path = "../../../../../../../html/html" }
tangram_app_common = { path = "../../../../../common" }
tangram_core = { path = "../../../../../../core" }
tangram_ui = { path = "../../../../../../ui" }
tangram_util = { path = "../../../../../../util" }
